# mil

./: .gitignore  CNAME  README  Test.hs  compile.cabal  diary.txt  dot.bat  index.html  match_example.txt  outline  runtime.c
Habit/Compiler/Register/: ClosureElimination.hs  Compiler.hs  ConstProp.hs  ControlFlowGraph.hs  Dataflow.hs  Eval.hs  Hoopl.hs  Liveness.hs  Machine.hs  NoOp.hs  RunCompiler.hs
Habit/Compiler/Stack/: Machine.hs
Habit/Compiler/X86/: Compiler.lhs
asm/: Prelude.hs
caffeine/: Free.lhs  InterpR.hs  InterpS.hs  README  compile.cabal
caffeine/Habit/Compiler/Register/: ClosureElimination.hs  Compiler.hs  ConstProp.hs  ControlFlowGraph.hs  Hoopl.hs  Liveness.hs  Machine.hs  NoOp.hs  PrintModule.hs  Prog.hs  RunCompiler.hs
caffeine/Habit/Compiler/Stack/: Compiler.hs  Eval.hs  RunCompiler.hs
caffeine/Habit/Compiler/X86/: Asm.hs  Compiler.lhs  RunCompiler.hs
caffeine/asm/: Silly.hs  Silly.r.hs  Triple.r.hs  Triple.s  runtime.c  silly.s  trip.s
caffeine/comp/: Main.lhs  MatchTest.lhs  RegComp.lhs
caffeine/report/: fig_Heap.vsd  fig_HeapZDef.vsd  fig_Pipeline.vsd  fig_SDef.vsd  fig_entry.vsd  fig_foldrAsm.vsd  fig_foldrReg.vsd  go.bat  pres.bat  pres2.tex  report.tex
caffeine/tests/: Comp.hs  Even.hs  Fib.hs  Fib2.hs  Foldr.hs  Head.hs  Map.hs  Map4.hs  Map6.hs  NullaryFuncs.hs  NullaryLocals.hs  Prelude.hs  Prim.hs  Top.hs
comp/: LambdaComp.hs  LambdaJavaComp.hs  MatchLang.lhs  StackComp.lhs
report/: .gitignore  fig_HeapExample.vsd  fig_exit.vsd  fig_foldr_Layout.vsd  presentation.tex  report.tex
tests/: Add.hs  Comp2.hs  Const3.hs  Foldr2.hs  Map2.hs  Map3.hs  Map5.hs  Odd.r.hs  RecursiveValue.hs  Simple.hs  Triple.hs  Uninterp.hs
thesis/: .ghci  .gitignore  BindReturnElim.lhs  Comp2.Monad.lhs  DeadBlocks.lhs  DeadCodeC.lhs  Dec.lhs  Filter.lhs  GHCTest.hs  HMonad.hs  Idx.lhs  Idx256.lhs  InlineReturn.lhs  JoinTest.hs  L3ToMIL.hs  LCM.hs  LCToMIL.hs  LCToMIL.lhs  Lambda1.hs  Lambda1.lhs  Lambda2.hs  Lambda3.hs  Live.lhs  MIL.hs  Makefile  Makefile.ini  OptMIL.hs  Spring10.tex  Targets.ini  Test.hs  TestL3.hs  TestLC.hs  TrimTail.lhs  Uncurry.lhs  UncurryGlobal.lhs  Util.hs  Variables.ini  active.tex  analysis.rb  analysis.xlsx  (+129 more)
thesis/Printer/: Common.hs  LambdaCase.hs  WadlerLeijen.hs
thesis/Syntax/: Common.hs  FPE.hs  LambdaCase.hs
