name: caffeine
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  build-depends: base >= 4 && < 5, value-supply >= 0.5 && < 1, mtl >= 1.1 && < 2, containers >= 0.3 && < 1, 
                 filepath >= 1.1 && < 2, habit-front,
                 GraphSCC >= 1 && < 2, fgl >= 5.4 && < 6,
                 hoopl >= 3.7.13 && < 3.7.14
  ghc-options: -O
  hs-source-dirs: .
                                
  exposed-modules: Habit.Compiler.Stack.Machine
                   Habit.Compiler.Stack.Compiler
                   Habit.Compiler.Stack.Eval
                   Habit.Compiler.Register.Machine
                   Habit.Compiler.Register.Compiler
                   Habit.Compiler.Register.Eval
--                   Habit.Compiler.X86.Compiler
        
executable register-compiler
  main-is: Habit/Compiler/Register/RunCompiler.hs
  build-depends: base, value-supply, mtl, containers, filepath, habit-front
  
  ghc-options: -O
  hs-source-dirs: .
                                
-- executable register-interpreter
--   main-is: InterpR.hs
--   build-depends: base
--   ghc-options: -O
--   hs-source-dirs: .

-- executable x86-compiler
--   main-is: Habit/Compiler/X86/RunCompiler.hs
--   build-depends: base, value-supply, mtl, containers, filepath, habit-front, process
  
--   ghc-options: -O
--   hs-source-dirs: .
                                
--   if flag(debug)
--     cpp-options:-DDEBUG

